k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chennai-flood-2025
  namespace: opsera-chennai-flood-2025-dev
  labels:
    app: chennai-flood-2025
    environment: dev
    tenant: opsera
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: opsera-chennai-flood-2025-dev.agent.opsera.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chennai-flood-2025
            port:
              number: 80
